ledger-core/v2/deploy/kube/1-bootstrap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: bootstrap
  namespace: insolar
spec:
  serviceAccountName: insolar-bootstrap
  terminationGracePeriodSeconds: 10
  restartPolicy: Never
  containers:
    - name: gen
      image: insolar/assured-ledger:latest
      imagePullPolicy: IfNotPresent
      command: ["bash", "-c", "bash /app/bootstrap/run.sh"]
      volumeMounts:
        - name: bootstrap-yaml
          mountPath: /etc/bootstrap
          readOnly: true
        - name: app-bootstrap
          mountPath: /app/bootstrap
  volumes:
    - name: bootstrap-yaml
      configMap:
        name: bootstrap-yaml
    - name: app-bootstrap
      configMap:
        name: app-bootstrap
