ledger-core/v2/deploy/kube/3-heavy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heavy
  namespace: insolar
spec:
  selector:
    matchLabels:
      app: heavy
  replicas: 1
  serviceName: platform-network
  template:
    metadata:
      labels:
        app: heavy
        role: heavy_material
        scope: platform
    spec:
      containers:
        - name: insolar
          image: "insolar/assured-ledger:latest"
          imagePullPolicy: IfNotPresent
          command: ["insolard"]
#          command: ["bash", "-c", "sleep 3600;"]
          args: [
              "test", "node",
              "--role=heavy_material",
              "--config=/etc/insolar/heavy-config.yaml",
              "--heavy-genesis=/var/data/bootstrap/heavy_genesis.json",
            ]
          ports:
            - containerPort: 13831
              name: discovery
            - containerPort: 19101
              name: public-api
            - containerPort: 19001
              name: admin-api
          volumeMounts:
            - name: database
              mountPath: /var/data
            - name: heavy-config
              mountPath: /etc/insolar
              readOnly: true
            - name: node-certs
              mountPath: /etc/insolar/certs
              readOnly: true
            - name: node-keys
              mountPath: /etc/insolar/keys
              readOnly: true
      volumes:
        - name: heavy-config
          configMap:
            name: heavy-config
        - name: node-keys
          secret:
            secretName: node-keys
        - name: node-certs
          secret:
            secretName: node-certs
        - name: database
          persistentVolumeClaim:
            claimName: database-heavy-0
