ledger-core/v2/deploy/kube/3-light.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: light
  namespace: insolar
spec:
  selector:
    matchLabels:
      app: light
  replicas: 2
  serviceName: platform-network
  template:
    metadata:
      labels:
        app: light
        role: light_material
        scope: platform
    spec:
      containers:
        - name: insolar
          image: insolar/assured-ledger:latest
          imagePullPolicy: IfNotPresent
          command: ["insolard"]
          args: [
            "test", "node",
            "--role=light_material",
            "--config=/etc/insolar/light-config.yaml",
          ]
          ports:
            - containerPort: 13831
              name: discovery
            - containerPort: 19101
              name: public-api
            - containerPort: 19001
              name: admin-api
          volumeMounts:
            - name: light-config
              mountPath: /etc/insolar
              readOnly: true
            - name: node-certs
              mountPath: /etc/insolar/certs
              readOnly: true
            - name: node-keys
              mountPath: /etc/insolar/keys
              readOnly: true
      volumes:
        - name: light-config
          configMap:
            name: light-config
        - name: node-keys
          secret:
            secretName: node-keys
        - name: node-certs
          secret:
            secretName: node-certs
