ledger-core/v2/deploy/kube/3-pulsar.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pulsar
  namespace: insolar
spec:
  selector:
    matchLabels:
      app: pulsar
  replicas: 1
  serviceName: platform-network
  template:
    metadata:
      labels:
        app: pulsar
        role: pulsar
        scope: platform
    spec:
      containers:
        - name: pulsar
          image: insolar/assured-ledger:latest
          imagePullPolicy: IfNotPresent
          command: ["pulsard"]
          args: ["--config", "/etc/pulsar/pulsard.yaml"]
          ports:
            - containerPort: 58091
              name: pulsar
          volumeMounts:
            - name: pulsar-config
              mountPath: /etc/pulsar
              readOnly: true
            - name: node-keys
              mountPath: /etc/insolar/keys
              readOnly: true
      volumes:
        - name: pulsar-config
          configMap:
            name: pulsar-config
        - name: node-keys
          secret:
            secretName: node-keys
