ledger-core/v2/deploy/kube/3-virtual.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: virtual
  namespace: insolar
spec:
  selector:
    matchLabels:
      app: virtual
  replicas: 5
  serviceName: platform-network
  template:
    metadata:
      labels:
        app: virtual
        role: virtual_material
        scope: platform
    spec:
      containers:
        - name: insolar
          image: insolar/assured-ledger:latest
          imagePullPolicy: IfNotPresent
          command: ["insolard"]
          args: [
            "test", "node",
            "--role=virtual",
            "--config=/etc/insolar/virtual-config.yaml",
          ]
          ports:
            - containerPort: 13831
              name: discovery
            - containerPort: 19101
              name: public-api
            - containerPort: 19001
              name: admin-api
            - containerPort: 32301
              name: testwallet-api
          volumeMounts:
            - name: virtual-config
              mountPath: /etc/insolar
              readOnly: true
            - name: node-certs
              mountPath: /etc/insolar/certs
              readOnly: true
            - name: node-keys
              mountPath: /etc/insolar/keys
              readOnly: true
      volumes:
        - name: virtual-config
          configMap:
            name: virtual-config
        - name: node-keys
          secret:
            secretName: node-keys
        - name: node-certs
          secret:
            secretName: node-certs
        - name: wait-script
          configMap:
            defaultMode: 0550
            name: wait-script
