ledger-core/v2/deploy/kube/generated.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insolar
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: insolard
  name: platform-network
  namespace: insolar
spec:
  clusterIP: None
  ports:
  - name: api
    port: 19101
    targetPort: public-api
  - name: admin-api
    port: 19001
    targetPort: admin-api
  - name: testwallet-api
    port: 32301
    targetPort: testwallet-api
  selector:
    scope: platform
---
apiVersion: v1
kind: Service
metadata:
  name: pulsewatcher
  namespace: insolar
spec:
  clusterIP: None
  selector:
    scope: pulsewatcher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsewatcher
  namespace: insolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsewatcher
  template:
    metadata:
      labels:
        app: pulsewatcher
        role: pulsewatcher
        scope: pulsewatcher
    spec:
      containers:
      - args:
        - -c
        - /etc/pulsewatcher/pulsewatcher.yaml
        command:
        - pulsewatcher
        image: insolar/assured-ledger:latest
        imagePullPolicy: IfNotPresent
        name: pulsewatcher
        volumeMounts:
        - mountPath: /etc/pulsewatcher
          name: pulsewatcher-config
          readOnly: true
      volumes:
      - configMap:
          name: pulsewatcher-config
        name: pulsewatcher-config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pulsar
  namespace: insolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsar
  serviceName: platform-network
  template:
    metadata:
      labels:
        app: pulsar
        role: pulsar
        scope: platform
    spec:
      containers:
      - args:
        - --config
        - /etc/pulsar/pulsard.yaml
        command:
        - pulsard
        image: insolar/assured-ledger:latest
        imagePullPolicy: IfNotPresent
        name: pulsar
        ports:
        - containerPort: 58091
          name: pulsar
        volumeMounts:
        - mountPath: /etc/pulsar
          name: pulsar-config
          readOnly: true
        - mountPath: /etc/insolar/keys
          name: node-keys
          readOnly: true
      volumes:
      - configMap:
          name: pulsar-config
        name: pulsar-config
      - name: node-keys
        secret:
          secretName: node-keys
      - configMap:
          defaultMode: 360
          name: wait-script
        name: wait-script
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: virtual
  namespace: insolar
spec:
  replicas: 5
  selector:
    matchLabels:
      app: virtual
  serviceName: platform-network
  template:
    metadata:
      labels:
        app: virtual
        role: virtual_material
        scope: platform
    spec:
      containers:
      - args:
        - test
        - node
        - --role=virtual
        - --config=/etc/insolar/virtual-config.yaml
        command:
        - insolard
        image: insolar/assured-ledger:latest
        imagePullPolicy: IfNotPresent
        name: insolar
        ports:
        - containerPort: 13831
          name: discovery
        - containerPort: 19101
          name: public-api
        - containerPort: 19001
          name: admin-api
        - containerPort: 32301
          name: testwallet-api
        volumeMounts:
        - mountPath: /etc/insolar
          name: virtual-config
          readOnly: true
        - mountPath: /etc/insolar/certs
          name: node-certs
          readOnly: true
        - mountPath: /etc/insolar/keys
          name: node-keys
          readOnly: true
      volumes:
      - configMap:
          name: virtual-config
        name: virtual-config
      - name: node-keys
        secret:
          secretName: node-keys
      - name: node-certs
        secret:
          secretName: node-certs
      - configMap:
          defaultMode: 360
          name: wait-script
        name: wait-script
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
  name: api-proxy
  namespace: insolar
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: platform-network
          servicePort: 19101
        path: /api
      - backend:
          serviceName: platform-network
          servicePort: 19001
        path: /admin-api
      - backend:
          serviceName: platform-network
          servicePort: 32301
        path: /wallet
---
apiVersion: v1
kind: Pod
metadata:
  name: bootstrap
  namespace: insolar
spec:
  containers:
  - command:
    - bash
    - -c
    - bash /app/bootstrap/run.sh
    image: insolar/assured-ledger:latest
    imagePullPolicy: IfNotPresent
    name: gen
    volumeMounts:
    - mountPath: /etc/bootstrap
      name: bootstrap-yaml
      readOnly: true
    - mountPath: /app/bootstrap
      name: app-bootstrap
  restartPolicy: Never
  serviceAccountName: insolar-bootstrap
  terminationGracePeriodSeconds: 10
  volumes:
  - configMap:
      name: bootstrap-yaml
    name: bootstrap-yaml
  - configMap:
      name: app-bootstrap
    name: app-bootstrap
